--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="save_to_db">Save to DB</string>
     <string name="old_measurements">Old Measurements</string>
     <string name="start_measurement">Start measurement</string>
+    <string name="start_icon">▶</string>
+    <string name="stop_icon">■</string>
 </resources>
